rancid.types.base: cisco eXR does not have admin show install summary; use admin show install active instead, which appears to be the same at least as far back as 5.3.4.

--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -747,7 +747,7 @@ sub ShowDebug {
     return(0);
 }
 
-# This routine parses "admin show install summary"
+# This routine parses "admin show install active"
 sub ShowInstallSummary {
     my($INPUT, $OUTPUT, $cmd) = @_;
     print STDERR "    In ShowInstallSummary: $_" if ($debug);
