--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -554,7 +554,7 @@ sub DirSlotN {
 	# filter frequently changing files from IOX bootflash, hardiska,
 	# and nvram
 	if ($dev =~ /(bootflash|disk[0-9]|harddisk|nvram)/) {
-	    if (/\s(\.python-history|aaa|\.bash_history)\s*$/ ||
+	    if (/\s(\.python-history|aaa|\.bash_history|.sppdc)\s*$/ ||
 	        /\s(ce_switch.log\S*|cisco_support|errmsg_cont)\s*$/ ||
 	        /\s(genstr_cont|temp_cont|temp_cont|temp_static_data)\s*$/ ||
 	        /\s(uptime_cont|volt_cont|volt_hist)\s*$/) {
