--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -1018,6 +1018,7 @@ sub ShowFlash {
 	    next;
 
 	if (/(dhcp_[^. ]*\.txt|vlan\.dat|sflog|snooping)/ ||
+		 /(LOCAL-CA-SERVER(?:[^\s]*))\s*$/ ||
 		 /(smart-log\/agentlog|syslog)\s*$/ ||
 		 /(log\/(?:ssp_tz\/)?[^. ]+\.log(?:\.[0-9]+\.gz)?)\s*$/) {
 	    # filter frequently changing files (dhcp & vlan database, logs) from flash
