junos.pm: EVO RE DRAM fluctuates; replace with "installed" value     - #     DRAM                      13635 MB (15499 MB installed)     + #     DRAM                      13652 MB (15499 MB installed)

--- a/lib/junos.pm.in
+++ b/lib/junos.pm.in
@@ -285,6 +285,8 @@ sub ShowChassisRoutingEngine {
 	/ Slot / && ProcessHistory("","","","# $_") && next;
 	/ Current state/ && ProcessHistory("","","","# $_") && next;
 	/ Election priority/ && ProcessHistory("","","","# $_") && next;
+	s/ (DRAM\s+)\d+ \w+ \((\d+ \w+) installed\)\s*/ $1$2\n/
+		&& ProcessHistory("","","","# $_") && next;
 	/ DRAM/ && ProcessHistory("","","","# $_") && next;
 	/ Model/ && ProcessHistory("","","","# $_") && next;
 	/ Serial ID/ && ProcessHistory("","","","# $_") && next;
