--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -102,9 +102,9 @@ CONFIG_CLEAN_FILES = login_top a10login agmrancid alogin arancid \
 	clogin csblogin cssrancid dllogin elogin erancid f5rancid \
 	flogin fnlogin fxlogin hlogin htlogin htrancid jlogin jerancid \
 	mrancid mrvlogin mtrancid mtlogin nlogin nrancid noklogin \
-	nslogin nsrancid panlogin rblogin rivlogin rivrancid rrancid \
-	rtftpcopy tlogin trancid xilogin xirancid xlogin ulogin wlogin \
-	zrancid
+	nslogin nsrancid panlogin pflogin rblogin rivlogin rivrancid \
+	rrancid rtftpcopy tlogin trancid xilogin xirancid xlogin \
+	ulogin wlogin zrancid
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
@@ -213,12 +213,13 @@ am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/a10login.in \
 	$(srcdir)/mtlogin.in $(srcdir)/mtrancid.in $(srcdir)/nlogin.in \
 	$(srcdir)/noklogin.in $(srcdir)/nrancid.in \
 	$(srcdir)/nslogin.in $(srcdir)/nsrancid.in \
-	$(srcdir)/panlogin.in $(srcdir)/rblogin.in \
-	$(srcdir)/rivlogin.in $(srcdir)/rivrancid.in \
-	$(srcdir)/rrancid.in $(srcdir)/rtftpcopy.in \
-	$(srcdir)/tlogin.in $(srcdir)/trancid.in $(srcdir)/ulogin.in \
-	$(srcdir)/wlogin.in $(srcdir)/xilogin.in $(srcdir)/xirancid.in \
-	$(srcdir)/xlogin.in $(srcdir)/zrancid.in $(top_srcdir)/depcomp \
+	$(srcdir)/panlogin.in $(srcdir)/pflogin.in \
+	$(srcdir)/rblogin.in $(srcdir)/rivlogin.in \
+	$(srcdir)/rivrancid.in $(srcdir)/rrancid.in \
+	$(srcdir)/rtftpcopy.in $(srcdir)/tlogin.in \
+	$(srcdir)/trancid.in $(srcdir)/ulogin.in $(srcdir)/wlogin.in \
+	$(srcdir)/xilogin.in $(srcdir)/xirancid.in $(srcdir)/xlogin.in \
+	$(srcdir)/zrancid.in $(top_srcdir)/depcomp \
 	$(top_srcdir)/mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
@@ -340,6 +341,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -356,10 +358,10 @@ bin_SCRIPTS = a10login alogin agmrancid anlogin arancid avologin \
 	control_rancid csblogin cssrancid dllogin elogin erancid \
 	f5rancid flogin fnlogin fxlogin hlogin hrancid htlogin \
 	htrancid jerancid jlogin mrancid mrvlogin mtlogin mtrancid \
-	nlogin noklogin nrancid nslogin nsrancid panlogin plogin \
-	rancid rblogin rivlogin rivrancid rrancid rtftpcopy tlogin \
-	trancid ulogin wlogin xilogin xirancid xlogin zrancid lg.cgi \
-	lgform.cgi rancid-cvs rancid-fe rancid-run
+	nlogin noklogin nrancid nslogin nsrancid panlogin pflogin \
+	plogin rancid rblogin rivlogin rivrancid rrancid rtftpcopy \
+	tlogin trancid ulogin wlogin xilogin xirancid xlogin zrancid \
+	lg.cgi lgform.cgi rancid-cvs rancid-fe rancid-run
 # XXX hack for the rancid to get pkglibdir, see corresponding XXX below
 bin_in = control_rancid.in hrancid.in plogin.in rancid.in
 EXTRA_DIST = lg.cgi.in lgform.cgi.in rancid-cvs.in rancid-fe.in rancid-run.in \
@@ -513,6 +515,8 @@ nslogin: $(top_builddir)/config.status $(srcdir)/nslogin.in
 nsrancid: $(top_builddir)/config.status $(srcdir)/nsrancid.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 panlogin: $(top_builddir)/config.status $(srcdir)/panlogin.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+pflogin: $(top_builddir)/config.status $(srcdir)/pflogin.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 rblogin: $(top_builddir)/config.status $(srcdir)/rblogin.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
