--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -143,6 +143,8 @@ sub ShowVersion {
 	if (/^$prompt/) { $found_version = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(0) if ($found_version);		# Only do this routine once
@@ -452,6 +454,8 @@ sub ShowActivationKey {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	# the pager can not be disabled per-session on the PIX
@@ -529,6 +533,11 @@ sub ShowDetail {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
+
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 
@@ -548,6 +557,8 @@ sub ShowLicense {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(0) if (/% no licensable udi in the system/i);	# show udi on old box
 	return(0) if (/% license not supported on this device/i);# show lic on old box
 	return(0) if (/% incomplete command/i);                 # show lic on old XE box
@@ -637,6 +648,10 @@ sub ShowSDM {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 
@@ -676,6 +691,8 @@ sub ShowRedundancy {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	# the pager can not be disabled per-session on the PIX
@@ -712,6 +729,8 @@ sub ShowIDprom {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	# the pager can not be disabled per-session on the PIX
@@ -746,6 +765,8 @@ sub ShowInstallActive {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
@@ -770,6 +791,8 @@ sub ShowEnv {
 	if (/^$prompt/) { $found_env = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(0) if ($found_env);		# Only do this routine once
@@ -837,6 +860,8 @@ sub ShowHWProgrammable {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+        next if (/^Time source is/);
 	return(0) if (/% incomplete command/i); # every platform is different
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
@@ -918,6 +943,10 @@ sub ShowGSR {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# return(1) if ($type !~ /^12[40]/);
@@ -961,6 +990,8 @@ sub ShowBoot {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(1) if (/Ambiguous command/i);
@@ -1004,6 +1035,9 @@ sub ShowFlash {
 	return(1) if ($type =~ /^(12[40]|7)/);
 	return(1) if ($ios eq "XE");
 	next if (/^\s+\^$/);
+
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
@@ -1147,6 +1181,8 @@ sub DirSlotN {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(1) if (/(No such device|Error Sending Request)/i);
@@ -1289,6 +1325,8 @@ sub ShowContAll {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	# return(1) if ($type =~ /^(12[40]|7[05])/);
 	return(-1) if (/command authorization failed/i);
@@ -1361,6 +1399,8 @@ sub ShowContCbus {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	#return(1) if ($type !~ /^7[05]0/);
 	return(-1) if (/command authorization failed/i);
@@ -1414,6 +1454,8 @@ sub ShowDebug {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
@@ -1423,7 +1465,7 @@ sub ShowDebug {
 	    s/^$1\s{$len}//;
 	}
 
-	/^Load for / && next;
+	/Load for / && next;
 	/^Time source is / && next;
 	/^No matching debug flags set$/ && next;
 	/^No debug flags set$/ && next;
@@ -1450,6 +1492,8 @@ sub ShowDiagbus {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	#return(1) if ($type !~ /^7[05]/);
 	next if (/^\s+\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
@@ -1546,6 +1590,8 @@ REDUX:	tr/\015//d;
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(0) if ($found_diag);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
@@ -1864,6 +1910,8 @@ sub ShowInventory {
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	return(0) if ($found_inventory);	# Only do this routine once
@@ -1921,6 +1969,8 @@ sub ShowModule {
     while (<$INPUT>) {
 	tr/\015//d;
 	next if (/^\s*\^$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	if (/online diag status/i) {
 	    $vss_show_module = 1;
 	    next;
@@ -1990,6 +2040,8 @@ sub ShowSpeVersion {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 
@@ -2011,6 +2063,8 @@ sub ShowC7200 {
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	#return(1) if ($type !~ /^72/);
 	return(-1) if (/command authorization failed/i);
@@ -2064,6 +2118,8 @@ sub ShowCapture {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
@@ -2098,6 +2154,8 @@ sub ShowDot1x {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+        next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	next if (/^Configuration last modified by/);
@@ -2132,6 +2190,8 @@ sub ShowVTP {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	#return(1) if ($type !~ /^(2900XL|3500XL|6000)$/);
 	return(-1) if (/command authorization failed/i);
@@ -2165,6 +2225,8 @@ sub ShowVLAN {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(1) if (/ambiguous command/i);
 	return(1) if (/incomplete command/i);
@@ -2211,6 +2273,8 @@ sub ShowShun {
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(-1) if (/command authorization failed/i);
 	# the pager can not be disabled per-session on the PIX
@@ -2240,6 +2304,8 @@ TOP:
 	next if (/^\s*$cmd\s*$/);
 	return(1) if (/Line has invalid autocommand /);
 	next if (/^\s+\^\s*$/);
+	next if (/^Load for five/);
+	next if (/^Time source is/);
 	return(1) if (/(invalid (input|command) detected|type help or )/i);
 	return(1) if (/\%Error: No such file or directory/);
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
