--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ nsrancid
 panlogin
 par
 plogin
+pslogin
 rancid
 rancid-cvs
 rancid-fe
@@ -131,6 +132,7 @@ junos.pm
 mrv.pm
 nxos.pm
 panos.pm
+ps.pm
 rancid.pm
 rancid.py
 rbt.pm
