--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -278,7 +278,7 @@ my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm arcos.pm \
 		 dell.pm dnos9.pm dnos10.pm edgemax.pm edgerouter.pm exos.pm \
 		 fortigate.pm foundry.pm fss2.pm fxos.pm \
 		 ios.pm iossb.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
-		 panos.pm rbt.pm smc.pm sros.pm vrp.pm wavesvros.pm 
+		 panos.pm ps.pm rbt.pm smc.pm sros.pm vrp.pm wavesvros.pm 
 
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 RANLIB = :
@@ -564,6 +564,7 @@ rancid.py: rancid.py.in
 mrv.pm: mrv.pm.in
 nxos.pm: nxos.pm.in
 panos.pm: panos.pm.in
+ps.pm: ps.pm.in
 rbt.pm: rbt.pm.in
 smc.pm: smc.pm.in
 sros.pm: sros.pm.in
