--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -12,18 +12,19 @@ AUTOMAKE_OPTIONS=foreign no-dependencies
 
 man_gen_MANS = cloginrc.5 lg.conf.5 rancid.3 rancid.conf.5 \
 		rancid.types.conf.5 lg_intro.1
-man_nogen_MANS = agmrancid.1 alogin.1 anlogin.1 \
-		arancid.1 avologin.1 avorancid.1 blogin.1 brancid.1 \
+man_nogen_MANS = a10login.1 agmrancid.1 alogin.1 anlogin.1 \
+		arancid.1 avologin.1 avorancid.1 blogin.1 brancid.1 brlogin.1 \
 		cat5rancid.1 clogin.1 control_rancid.1 csblogin.1 cssrancid.1 \
 		dllogin.1 \
-		elogin.1 erancid.1 f5rancid.1 flogin.1 fnlogin.1 \
+		elogin.1 erancid.1 f5rancid.1 flogin.1 fnlogin.1 fxlogin.1 \
 		hlogin.1 hrancid.1 htlogin.1 \
 		htrancid.1 jerancid.1 jlogin.1 mrancid.1 \
 		mrvlogin.1 mtlogin.1 mtrancid.1 nlogin.1 noklogin.1 \
 		nrancid.1 nslogin.1 nsrancid.1 \
 		panlogin.1 par.1 plogin.1 \
 		rancid-cvs.1 rancid-run.1 rancid.1 \
-		rancid.types.base.5 rancid_intro.1 rivlogin.1 rivrancid.1 \
+		rancid.types.base.5 rancid_intro.1 \
+		rblogin.1 rivlogin.1 rivrancid.1 \
 		router.db.5 rrancid.1 tlogin.1 ulogin.1 wlogin.1 \
 		xilogin.1 xlogin.1 xirancid.1 trancid.1 \
 		zrancid.1
