--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -146,9 +146,10 @@ am__uninstall_files_from_dir = { \
   }
 man1dir = $(mandir)/man1
 am__installdirs = "$(DESTDIR)$(man1dir)" "$(DESTDIR)$(man3dir)" \
-	"$(DESTDIR)$(man5dir)"
+	"$(DESTDIR)$(man5dir)" "$(DESTDIR)$(man7dir)"
 man3dir = $(mandir)/man3
 man5dir = $(mandir)/man5
+man7dir = $(mandir)/man7
 NROFF = nroff
 MANS = $(man_MANS)
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
@@ -277,7 +278,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 man_gen_MANS = cloginrc.5 lg.conf.5 rancid.3 rancid.conf.5 \
-		rancid.types.conf.5 lg_intro.1
+		rancid.types.conf.5 lg_intro.7
 
 man_nogen_MANS = a10login.1 agmrancid.1 alogin.1 anlogin.1 \
 		arancid.1 avologin.1 avorancid.1 blogin.1 brancid.1 brlogin.1 \
@@ -290,7 +291,7 @@ man_nogen_MANS = a10login.1 agmrancid.1 alogin.1 anlogin.1 \
 		nrancid.1 nslogin.1 nsrancid.1 \
 		panlogin.1 par.1 plogin.1 \
 		rancid-cvs.1 rancid-run.1 rancid.1 \
-		rancid.types.base.5 rancid_intro.1 \
+		rancid.types.base.5 rancid_intro.7 \
 		rblogin.1 rivlogin.1 rivrancid.1 \
 		router.db.5 rrancid.1 tlogin.1 ulogin.1 wlogin.1 \
 		xilogin.1 xlogin.1 xirancid.1 trancid.1 \
@@ -298,9 +299,9 @@ man_nogen_MANS = a10login.1 agmrancid.1 alogin.1 anlogin.1 \
 
 man_MANS = $(man_nogen_MANS) $(man_gen_MANS)
 EXTRA_DIST = $(man_nogen_MANS) $(man_gen_MANS:%=%.in)
-htmls_MANS = clogin.1 cloginrc.5 control_rancid.1 lg.conf.5 lg_intro.1 \
+htmls_MANS = clogin.1 cloginrc.5 control_rancid.1 lg.conf.5 lg_intro.7 \
 	par.1 rancid-cvs.1 rancid-run.1 rancid.1 rancid.3 \
-	rancid.conf.5 rancid.types.conf.5 rancid_intro.1 router.db.5
+	rancid.conf.5 rancid.types.conf.5 rancid_intro.7 router.db.5
 
 htmls_gen_MANS = $(htmls_MANS:%=%.html)
 CLEANFILES = $(man_gen_MANS) $(htmls_gen_MANS)
@@ -482,6 +483,49 @@ uninstall-man5:
 	} | sed -e 's,.*/,,;h;s,.*\.,,;s,^[^5][0-9a-z]*$$,5,;x' \
 	      -e 's,\.[0-9a-z]*$$,,;$(transform);G;s,\n,.,'`; \
 	dir='$(DESTDIR)$(man5dir)'; $(am__uninstall_files_from_dir)
+install-man7: $(man_MANS)
+	@$(NORMAL_INSTALL)
+	@list1=''; \
+	list2='$(man_MANS)'; \
+	test -n "$(man7dir)" \
+	  && test -n "`echo $$list1$$list2`" \
+	  || exit 0; \
+	echo " $(MKDIR_P) '$(DESTDIR)$(man7dir)'"; \
+	$(MKDIR_P) "$(DESTDIR)$(man7dir)" || exit 1; \
+	{ for i in $$list1; do echo "$$i"; done;  \
+	if test -n "$$list2"; then \
+	  for i in $$list2; do echo "$$i"; done \
+	    | sed -n '/\.7[a-z]*$$/p'; \
+	fi; \
+	} | while read p; do \
+	  if test -f $$p; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; echo "$$p"; \
+	done | \
+	sed -e 'n;s,.*/,,;p;h;s,.*\.,,;s,^[^7][0-9a-z]*$$,7,;x' \
+	      -e 's,\.[0-9a-z]*$$,,;$(transform);G;s,\n,.,' | \
+	sed 'N;N;s,\n, ,g' | { \
+	list=; while read file base inst; do \
+	  if test "$$base" = "$$inst"; then list="$$list $$file"; else \
+	    echo " $(INSTALL_DATA) '$$file' '$(DESTDIR)$(man7dir)/$$inst'"; \
+	    $(INSTALL_DATA) "$$file" "$(DESTDIR)$(man7dir)/$$inst" || exit $$?; \
+	  fi; \
+	done; \
+	for i in $$list; do echo "$$i"; done | $(am__base_list) | \
+	while read files; do \
+	  test -z "$$files" || { \
+	    echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(man7dir)'"; \
+	    $(INSTALL_DATA) $$files "$(DESTDIR)$(man7dir)" || exit $$?; }; \
+	done; }
+
+uninstall-man7:
+	@$(NORMAL_UNINSTALL)
+	@list=''; test -n "$(man7dir)" || exit 0; \
+	files=`{ for i in $$list; do echo "$$i"; done; \
+	l2='$(man_MANS)'; for i in $$l2; do echo "$$i"; done | \
+	  sed -n '/\.7[a-z]*$$/p'; \
+	} | sed -e 's,.*/,,;h;s,.*\.,,;s,^[^7][0-9a-z]*$$,7,;x' \
+	      -e 's,\.[0-9a-z]*$$,,;$(transform);G;s,\n,.,'`; \
+	dir='$(DESTDIR)$(man7dir)'; $(am__uninstall_files_from_dir)
 tags TAGS:
 
 ctags CTAGS:
@@ -526,7 +570,7 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(MANS)
 installdirs:
-	for dir in "$(DESTDIR)$(man1dir)" "$(DESTDIR)$(man3dir)" "$(DESTDIR)$(man5dir)"; do \
+	for dir in "$(DESTDIR)$(man1dir)" "$(DESTDIR)$(man3dir)" "$(DESTDIR)$(man5dir)" "$(DESTDIR)$(man7dir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -596,7 +640,7 @@ install-info: install-info-am
 
 install-info-am:
 
-install-man: install-man1 install-man3 install-man5
+install-man: install-man1 install-man3 install-man5 install-man7
 
 install-pdf: install-pdf-am
 
@@ -626,7 +670,8 @@ ps-am:
 
 uninstall-am: uninstall-man
 
-uninstall-man: uninstall-man1 uninstall-man3 uninstall-man5
+uninstall-man: uninstall-man1 uninstall-man3 uninstall-man5 \
+	uninstall-man7
 
 .MAKE: install-am install-strip
 
@@ -636,12 +681,12 @@ uninstall-man: uninstall-man1 uninstall-man3 uninstall-man5
 	install-data-am install-dvi install-dvi-am install-exec \
 	install-exec-am install-html install-html-am install-info \
 	install-info-am install-man install-man1 install-man3 \
-	install-man5 install-pdf install-pdf-am install-ps \
-	install-ps-am install-strip installcheck installcheck-am \
-	installdirs maintainer-clean maintainer-clean-generic \
-	mostlyclean mostlyclean-generic pdf pdf-am ps ps-am tags-am \
-	uninstall uninstall-am uninstall-man uninstall-man1 \
-	uninstall-man3 uninstall-man5
+	install-man5 install-man7 install-pdf install-pdf-am \
+	install-ps install-ps-am install-strip installcheck \
+	installcheck-am installdirs maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-generic pdf \
+	pdf-am ps ps-am tags-am uninstall uninstall-am uninstall-man \
+	uninstall-man1 uninstall-man3 uninstall-man5 uninstall-man7
 
 .PRECIOUS: Makefile
 
@@ -664,10 +709,10 @@ lg.conf.5: Makefile $(srcdir)/lg.conf.5.in
 	$(auto_edit) $(srcdir)/lg.conf.5.in >lg.conf.5.tmp; \
 	mv lg.conf.5.tmp lg.conf.5
 
-lg_intro.1: Makefile $(srcdir)/lg_intro.1.in
-	rm -f lg_intro.1 lg_intro.1.tmp; \
-	$(auto_edit) $(srcdir)/lg_intro.1.in >lg_intro.1.tmp; \
-	mv lg_intro.1.tmp lg_intro.1
+lg_intro.7: Makefile $(srcdir)/lg_intro.7.in
+	rm -f lg_intro.7 lg_intro.7.tmp; \
+	$(auto_edit) $(srcdir)/lg_intro.7.in >lg_intro.7.tmp; \
+	mv lg_intro.7.tmp lg_intro.7
 
 rancid.conf.5: Makefile $(srcdir)/rancid.conf.5.in
 	rm -f rancid.conf.5 rancid.conf.5.tmp; \
