arbor.pm: add commands system file show, system show, system disk show

--- a/lib/arbor.pm.in
+++ b/lib/arbor.pm.in
@@ -168,7 +168,31 @@ sub ShowConfig {
     return(0);
 }
 
-# This routine parses "system hardware"
+# This routine parses "system disk show"
+sub ShowFlash {
+    my($INPUT, $OUTPUT, $cmd) = @_;
+    print STDERR "    In ShowFlash: $_" if ($debug);
+
+    while (<$INPUT>) {
+	tr/\015//d;
+	last if (/^$prompt/);
+	next if (/^(\s*|\s*$cmd\s*)$/);
+	return(1) if (/invalid command/i);
+
+	# Filesystem status:
+	#   Filesystem  Size/Used         Inodes/Used
+	#    boot        476M/164M (37%)   126K/70 (1%)
+	s/\s+inodes\/.*//;
+	s/(\s+\w+\s+)([\d.]+.\/)\S+\s+(\S+).*/$1$2$3/;
+
+	ProcessHistory("Version","","","# $_");
+    }
+    ProcessHistory("Version","","","#\n");
+    return(0);
+}
+
+
+# This routine parses "system hardware" & "system show"
 sub ShowHardware {
     my($INPUT, $OUTPUT, $cmd) = @_;
     print STDERR "    In ShowHardware: $_" if ($debug);
@@ -185,8 +209,8 @@ sub ShowHardware {
 	# some stupid timer error from this half-assed device
 	next if (/comsh: timer error, idle timeout will be unavailable/i);
 
-	next if (/^boot time: /i);
-	next if (/^load averages: /i);
+	next if (/^\s*boot time: /i);
+	next if (/^\s*load averages: /i);
 
 	ProcessHistory("Inventory","","","# $_");
     }
@@ -194,7 +218,8 @@ sub ShowHardware {
     return(0);
 }
 
-# This routine parses "show system version", "show system build-parameters"
+# This routine parses "system version", "system build-parameters",
+# "system file show"
 sub ShowVersion {
     my($INPUT, $OUTPUT, $cmd) = @_;
     print STDERR "    In ShowVersion: $_" if ($debug);
