--- a/bin/rancid.in
+++ b/bin/rancid.in
@@ -26,7 +26,7 @@ our @ISA = qw(Exporter rancid);
 
 sub usage()
 {
-    print STDERR "rancid [-dhltCV] -t device_type [-f filename | hostname]\n";
+    print STDERR "rancid [-dhlCV] -t device_type [-f filename | hostname]\n";
     exit 64;
 }
 
