arbor.pm: ShowFlash(): drop % used

--- a/lib/arbor.pm.in
+++ b/lib/arbor.pm.in
@@ -182,8 +182,8 @@ sub ShowFlash {
 	# Filesystem status:
 	#   Filesystem  Size/Used         Inodes/Used
 	#    boot        476M/164M (37%)   126K/70 (1%)
-	s/\s+inodes\/used.*//i;
-	s/(\s+\w+\s+)([\d.]+.\/)\S+\s+(\S+).*/$1$2$3/;
+	s/\/used\s+inodes\/used.*//i;
+	s/(\s+\w+\s+)([\d.]+.)\/\S+\s+(\S+).*/$1$2/;
 
 	ProcessHistory("Version","","","# $_");
     }
