--- a/bin/mtrancid.in
+++ b/bin/mtrancid.in
@@ -265,6 +265,11 @@ sub Export {
 			# Fix quoted strings
 			$buffer =~ s/(\S+)="(\S+)"/$1=$2/g;
 
+			# skip dynamic configuration, like
+			# set <pppoe-joker> disabled=yes display-time=5s
+			# set <pppoe-smoker > disabled=yes display-time=5s
+			($buffer = "", next) if (/set <\S+\s?> /);
+
 			ProcessHistory("","","","$buffer");
 			$buffer = "";
 		}
